fix broken links

--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -159,7 +159,7 @@
 			</p>
 
 			<p>
-				Nous intervenons également très régulièrement en tant qu'<a href="{{ path('groupe_jazz_manouche_mariage_paris') }}">orchestre de mariage</a>, au vin d'honneur par exemple.
+				Nous intervenons également très régulièrement en tant qu'orchestre de mariage, au vin d'honneur par exemple.
 			</p>
 
 			<div class="row">
@@ -237,7 +237,7 @@
 						Une formule discrète pour votre vin d'honneur ? Un repas en musique ? Une soirée au son du jazz manouche ?<br>
 					</p>
 
-					<a href="{{ path('groupe_musique_mariage') }}" class="btn btn-primary">En savoir plus</a>
+					<a href="{{ path('animations_mariages') }}" class="btn btn-primary">En savoir plus</a>
 				</div>
 
 				<div class="col-sm-6 col--mbot">
