--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -54,43 +54,6 @@
 				</p>
 			</div>
 			<!--<img src="img/accordeoniste-paris.jpg" alt="Accordéoniste à Paris - En concert" title="Accordéoniste professionnel à Paris" class="flash-item__background">-->
-
-			<!--
-			<div class="container-fluid flash-new-item__content">
-				<div class="row flash-item-row">
-					<div class="col-md-4 flash-item-col">
-						<h2 class="flash-item__content-title">Accordéoniste pour votre soirée</h2>
-
-						<p class="flash-item__content-text">
-							Vous organisez une soirée et souhaitez un accordéoniste pour l'animation musicale, dans un style jazz ou guinguette ?
-						</p>
-
-						<a href="{{ path('accordeoniste_soiree') }}" class="btn btn-secondary flash-item__content-btn">En savoir plus</a>
-
-					</div>
-
-					<div class="col-md-4 flash-item-col">
-						<h2 class="flash-item__content-title">Groupe de jazz manouche pour vos événéments</h2>
-
-						<p class="flash-item__content-text">
-							Notre groupe de musiciens jazz manouche professionnels vous propose des formules pour événements, du duo au quartet.
-						</p>
-
-						<a href="{{ path('manouche') }}" class="btn btn-secondary flash-item__content-btn">En savoir plus</a>
-					</div>
-
-					<div class="col-md-4 flash-item-col">
-						<h2 class="flash-item__content-title">Animations musicales</h2>
-
-						<p class="flash-item__content-text">
-							Vous cherchez une animation musicale ? Je propose des formules jazz et chanson française, du solo au quartet.
-						</p>
-
-						<a href="{{ path('animations') }}" class="btn btn-secondary flash-item__content-btn">En savoir plus</a>
-					</div>
-				</div>
-			</div>
-			-->
 		</div>
 	</section>
 
@@ -156,7 +119,7 @@
 							</p>
 
 							<p class="txt--blank">
-								Je suis <a href="{{ path('soirees_paris') }}">accordéoniste à Paris</a> mais me produis dans la France entière. Différentes formules sont disponibles et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies et votre budget, je peux venir <a href="{{ path('accordeoniste_soiree') }}">en solo pour votre soirée</a> ou accompagné par d'autres musiciens ; lors d'un mariage ou d'une soirée privée, on appréciera tout particulièrement le <a href="{{ path('manouche') }}">groupe de jazz manouche</a>, par exemple. J'accompagne également plusieurs chanteuses, avec lesquelles nous proposons des répertoires autour de la chanson française ; un duo très apprécié pour vos anniversaires, ou dans les maisons de retraite (EHPAD, ...) !
+								Je suis <a href="{{ path('accordeoniste_soiree') }}">accordéoniste à Paris</a> mais me produis dans la France entière. Différentes formules sont disponibles et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies et votre budget, je peux venir <a href="{{ path('accordeoniste_soiree') }}">en solo pour votre soirée</a> ou accompagné par d'autres musiciens ; lors d'un mariage ou d'une soirée privée, on appréciera tout particulièrement le <a href="{{ path('manouche') }}">groupe de jazz manouche</a>, par exemple. J'accompagne également plusieurs chanteuses, avec lesquelles nous proposons des répertoires autour de la chanson française ; un duo très apprécié pour vos anniversaires, ou dans les maisons de retraite (EHPAD, ...) !
 							</p>
 
 							<p>
