--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -39,7 +39,7 @@
 			{{ include('utils/contact-cta.html.twig') }}
 
 			<p>
-                Vous recherchez un <strong>groupe de jazz manouche</strong> pour votre soirée privée, <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}">mariage</a>, anniversaire, cocktail d'entreprise ou tout autre événement ? À Paris ou en Ile de France ? Vous avez fait le tour des sites qui proposent une <strong>recherche de musiciens</strong> et ne savez pas qui choisir ? Vous êtes au bon endroit ! <strong>Musiciens professionnels</strong> et expérimentés, nous vous proposons différentes formules (duo, trio, quartet, ...), toutes sur mesure, pour une animation musicale de qualité lors de votre événement.
+                Vous recherchez un <strong>groupe de jazz manouche</strong> pour votre soirée privée, mariage, anniversaire, cocktail d'entreprise ou tout autre événement ? À Paris ou en Ile de France ? Vous avez fait le tour des sites qui proposent une <strong>recherche de musiciens</strong> et ne savez pas qui choisir ? Vous êtes au bon endroit ! <strong>Musiciens professionnels</strong> et expérimentés, nous vous proposons différentes formules (duo, trio, quartet, ...), toutes sur mesure, pour une animation musicale de qualité lors de votre événement.
 			</p>
 
 			<p>
