--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -235,6 +235,7 @@
 
 					<p>
 						Une formule discrète pour votre vin d'honneur ? Un repas en musique ? Une soirée au son du jazz manouche ?<br>
+						Un groupe de musique <i>live</i> apportera un plus non négligeable à votre mariage, et plaira à tous vos invités !
 					</p>
 
 					<a href="{{ path('animations_mariages') }}" class="btn btn-primary">En savoir plus</a>
@@ -257,7 +258,7 @@
 						Votre entreprise souhaite organiser une réception ou un cocktail à l'occasion d'un événement particulier (inauguration, lancement de marque, ...) ? N'hésitez plus, et ajouter une touche musicale chic et décontractée ! En solo ou avec d'autres musiciens, les standards jazz résonneront en toute discrétion au son de l'accordéon, et apporteront LE plus à votre soirée.
 					</p>
 
-					<!--<a href="#" class="btn btn-primary">En savoir plus</a>-->
+					<a href="{{ path('entreprise') }}" class="btn btn-primary">En savoir plus</a>
 				</div>
 
 				<div class="col-sm-6 col--mbot">
@@ -299,7 +300,7 @@
 			<p>
 				<strong>Quelles sont les démarches administratives ?</strong> <br>
 				<a href="https://www.jeremy-dutheil.fr/blog/devenir-intermittent-du-spectacle/" target="_blank">Intermittents du spectacle</a>, notre mode de fonctionnement préféré est <strong>le Guso</strong> ; il s'agit d'un service gratuit mis en place par l'état, afin de permettre l'embauche de musiciens de manière simplifiée. Nous vous accompagnons tout au long du processus, qui est très facile. Plus d'informations sur l'article suivant : <a href="https://www.jeremy-dutheil.fr/blog/comment-embaucher-un-musicien/">Comment embaucher un musicien ?</a> <br>
-				Si vous ne pouvez (ou ne souhaitez) pas passer par le Guso, nous pouvons établir un contrat et une facture par l'intermédiaire d'une boîte de production. Dans ce mode de fonctionnement, l'intermédiaire prend un pourcentage et la TVA est également appliquée ; nous devrons donc facturer 17% de frais supplémentaires.
+				Si vous ne pouvez (ou ne souhaitez) pas passer par le Guso, nous pouvons établir un contrat et une facture par l'intermédiaire d'une boîte de production. Dans ce mode de fonctionnement, l'intermédiaire prend un pourcentage et la TVA est également appliquée ; nous devrons donc facturer 10 % de frais supplémentaires.
 			</p>
 
 			<p>
@@ -312,7 +313,50 @@
 				Nous sommes basés en région parisienne, mais nous déplaçons dans toute la France ; en fonction du lieu de votre événement, nous devrons facturer les frais de déplacements occassionnés. Il est parfois également nécessaire de prévoir un hébergement ; vous serez bien entendu prévenu dès l'établissement d'un devis.
 			</p>
 
+			<p>
+				<strong>Possédez vous le matériel de sonorisation ?</strong> <br>
+				Nous sommes autonomes en matériel de sonorisation jusqu'à <strong>300 personnes</strong> environ. Suivant le lieu de votre événement, nous optons plutôt pour une sonorisation légère (voir parfois en acoustique), ou alors pour un système plus complet. Nous en discuterons avant votre soirée, afin de nous adapter au mieux à vos besoins et vos envies.
+			</p>
+
+			<p>
+				<strong>Vous produisez vous dans le cadre d'événements organisés par des particuliers ?</strong> <br>
+				Bien sûr ! Nos différents groupes de musique se produisent autant lors de soirées d'entreprises que d'événements particuliers (anniversaires, mariages, ...).
+			</p>
+
+			<p>
+				<strong>Quelle place faut-il prévoir pour votre groupe de musiciens ?</strong> <br>
+				Tout d'abord, la place nécessaire dépend du nombre de musiciens présents dans la formule retenue ; en solo ou duo, l'espace est réduit au minimum. Prévoyez de quoi installer 2 chaises, et un peu d'espace pour le mouvement des instruments et la sonorisation. Dans le cadre des formules trio ou quartet, il faudra bien entendu prévoir un peu plus de place pour les musiciens.
+			</p>
+
+
+
 			<hr style="background-color: #2d2d2d; margin: 25px 0;">
+
+			{{ include('utils/contact-cta.html.twig') }}
+
+			<h2 class="section-title section-title--small">Animation musicale <small>Profitez de notre expérience</small></h2>
+
+			<p>
+				Que vous soyez une entreprise ou un particulier, vous voulez que tout soit parfait lorsque vous organisez un événement ou une soirée. Il en va de votre image de marque dans un cas, de l'ambiance de votre soirée dans l'autre cas. Les étapes avant la réalisation de la soirée finale sont nombreuses, et le stress s'accumule forcément. Afin de voir vos envies se réaliser, et vous permettre d'être plus sereins, vous devez pouvoir vous appuyer sur des <strong>professionnels de l'événementiel</strong>.
+			</p>
+
+			<p>
+				En tant que musiciens, <strong>l'animation musicale</strong> fait partie intégrante de notre métier, et nous avons acquis au fur et à mesure des années une expérience considérable. Aujourd'hui, il est essentiel pour nous de vous <strong>accompagner</strong> dans la réalisation de votre événement. Nous ne sommes pas simplement un <strong>groupe de musique</strong> qui vient jouer à votre soirée, mais bel et bien un partenaire. Nous pensons notamment à plusieurs points sur lesquels nous pouvons vous conseiller, et qui feront de l'animation musicale de votre soirée une réussite complète : 
+			</p>
+
+			<ul>
+				<li><strong>Le répertoire</strong> : on ne s'attends pas à la même musique lorsqu'on organise un anniversaire entre amis, ou lorsqu'on gère un cocktail d'entreprise. Nos différents répertoires nous permettent de vous proposer plusieurs styles musicaux pour votre soirée, en particulier jazz et chanson française. Ces différents types de musique nous permettent de répondre à beaucoup de demandes, mais surtout de nous <strong>adapter</strong> au mieux à votre événement. De par les nombreuses prestations d'animation musicale que nous avons déjà effectué, nous sommes en même de vous guider sur les potentielles attentes de vos invités, en fonction de votre type de soirée. </li>
+				
+				<li style="margin-top: 10px;"><strong>Les musiciens</strong> : de la même manière que le choix du répertoire est essentiel, le choix d'un groupe de musique pour votre événement est très important également. Plusieurs critères sont à prendre en compte : voulez-vous plutôt une animation musicale discrète, ou quelque chose "qui envoie" ? De quelle place disposez vous pour l'installation des musiciens ? Souhaitez-vous créer une ambiance intimiste, ou à l'inverse digne des plus grands événements musicaux ?</li>
+				
+				<li style="margin-top: 10px;"><strong>La sonorisation</strong> : un aspect bien souvent négligé lors d'une animation musicale, et qui pourtant en conditionne le succès. Le volume de la musique lors de votre soirée ne doit être ni trop faible, ni trop fort. S'il est trop faible, dans le cadre d'une sonorisation insuffisante par exemple, alors vos invités seront déçus car ils devront tendre l'oreille pour écouter les musiciens. S'il est trop fort, vos invités seront alors dérangés dans leurs discussions et pourraient garder un souvenir désagréable de l'événement. Il est indispensable d'adapter au mieux la sonorisation en fonction du lieu, du nombre d'invités et du style de musique choisi. Nous sommes partisans du "moins de volume possible", tout en restant audible. C'est pourquoi nous utilisons quasi-systématiquement un système de sonorisation, qui sera réglé plutôt bas afin de ne pas déranger vos invités mais qu'ils nous entendent bien.</li>
+				
+				<li style="margin-top: 10px;"><strong>La place de la musique dans votre soirée</strong> : le déroulé de votre soirée est très important, et il faudra bien réfléchir en amont à la place de l'animation musicale au sein de celle-ci. S'agit il d'accueillir vos invités en musique, ou plutôt de proposer une musique d'ambiance lors du repas ? Est-ce que vous souhaitez placer les musiciens à l'endroit du buffet, ou plutôt créer un espace d'écoute réservé à la musique ? </li>
+			</ul>
+
+			<p>
+				En tant que prestataires pour l'animation musicale de votre soirée, il est essentiel que nous puissions répondre à ces questions et vous décharger au maximum lors de l'organisation. À titre d'exemple, quelques autres critères indispensables à la réussite de votre événement : notre ponctualité, nos tenues, notre politesse, etc...
+			</p>
 
 			{{ include('utils/contact-cta.html.twig') }}
 		</div>
