--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -46,7 +46,7 @@
 			</p>
 
 			<p>
-				Nos formules étant destinées à tout type de public, ces <a href="{{ path('musiciens_soirees') }}">groupes de musiciens</a> s'adressent aussi bien aux <em>particuliers</em> qu'aux <em>professionnels</em>. Grâce aux qualités acoustique de l'accordéon (et des autres instruments pour les orchestres), les conditions techniques sont souvent réduites au minimum. En effet, la plupart du temps, la sonorisation n'est pas nécessaire.
+				Nos formules étant destinées à tout type de public, ces <a href="{{ path('musiciens_soirees') }}">groupes de musiciens</a> s'adressent aussi bien aux <em>particuliers</em> qu'aux <em>professionnels</em>. Grâce aux qualités acoustique de l'accordéon (et des autres instruments pour les orchestres), les conditions techniques sont souvent réduites au minimum. En effet, la plupart du temps, il n'est pas nécessaire d'avoir une sonorisation conséquente, de petits amplis suffisent. 
 			</p>
 
 			<p>
