--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -68,7 +68,7 @@
 							<h1 class="section-title">Accordéoniste à Paris</h2>
 
 							<p>
-								Jérémy Dutheil est un accordéoniste français complet abordant un large univers musical, original et résolument moderne. De la <em class="text-link">guinguette</em> aux <em class="text-link">musiques du monde</em>, en passant par la <em class="text-link">chanson française</em> et le <em class="text-link">jazz manouche</em>, cet artiste polyvalent et passionné aime toucher à tous les styles.
+								Jérémy Dutheil est un accordéoniste français complet abordant un large univers musical, original et résolument moderne. Du jazz manouche à la chanson française, en passant par les musiques du monde ou l'esprit guinguette, cet artiste polyvalent et passionné aime toucher à tous les styles.
 							</p>
 
 							<p>
@@ -76,7 +76,7 @@
 							</p>
 
 							<p>
-								Même s'il est accordéoniste à Paris, Jérémy se produit sur scène dans toute la France, seul ou en groupe, notamment avec son <a style="color: #555555;" href="{{ path('manouche') }}"><strong>groupe de jazz manouche</strong></a> : <a href="{{ path('jdsp') }}">Jérémy Dutheil & Solal Poux</a>.
+								Même s'il est accordéoniste à Paris, Jérémy se produit sur scène dans toute la France, seul ou en groupe, notamment avec son <a style="color: #E4E7EB;" href="{{ path('manouche') }}"><strong>groupe de jazz manouche</strong></a> : <a href="{{ path('jdsp') }}">Jérémy Dutheil & Solal Poux</a>.
 							</p>
 
 							<p>
@@ -115,11 +115,15 @@
 							<h2 class="section-title section-title--blank">Mariage, soirée, cocktail . . .</h2>
 
 							<p class="txt--blank">
-								L'accordéon, de par sa richesse et sa diversité musicales, se prête particulièrement bien au jeu de l'<strong>animation musicale</strong>. Fort d'une expérience certaine, je propose un répertoire varié qui plaira à tout type de public, comme en attestent les nombreux avis positifs. Ici il ne s'agit pas d'un concert classique, mais de s'adapter en fonction de votre lieu et de l'ambiance attendue pour votre soirée. Seul ou accompagné (guitariste, contrebassiste, ...), je me plairai à jouer des standards de jazz et <a href="{{ path('manouche') }}">jazz manouche</a> lors d'une <a href="{{ path('entreprise') }}">soirée d'entreprise</a>, d'un repas en musique ou au vin d'honneur de <a href="{{ path('animations_mariages') }}">votre mariage</a>. Très à la mode actuellement, je propose également des <a href="{{ path('guinguette') }}">soirées guinguettes</a> en solo ou avec chanteuse, autour de la chanson française d'époque.
+								L'accordéon, de par sa richesse et sa diversité musicales, se prête particulièrement bien au jeu de l'<strong>animation musicale</strong>. Fort de plusieurs années d'expérience, je propose un répertoire varié qui plaira à tout type de public, comme en attestent les nombreux avis et retours positifs.
+							</p>
+
+							<p>
+								Ici il ne s'agit pas d'un concert classique, mais de s'adapter en fonction de votre lieu et de l'ambiance attendue pour votre soirée. Seul ou accompagné par d'autres musiciens (guitariste, contrebassiste, ...), je me plairai à jouer des standards de jazz et <strong>jazz manouche</strong> lors d'une <a href="{{ path('entreprise') }}">soirée d'entreprise</a>, d'un repas en musique ou au vin d'honneur de <a href="{{ path('animations_mariages') }}">votre mariage</a>. Très à la mode actuellement, je propose également des <a href="{{ path('guinguette') }}">soirées guinguettes</a> en solo ou avec chanteuse, autour de la chanson française d'époque.
 							</p>
 
 							<p class="txt--blank">
-								Je suis <a href="{{ path('accordeoniste_soiree') }}">accordéoniste à Paris</a> mais me produis dans la France entière. Différentes formules sont disponibles et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies et votre budget, je peux venir <a href="{{ path('accordeoniste_soiree') }}">en solo pour votre soirée</a> ou accompagné par d'autres musiciens ; lors d'un mariage ou d'une soirée privée, on appréciera tout particulièrement le <a href="{{ path('manouche') }}">groupe de jazz manouche</a>, par exemple. J'accompagne également plusieurs chanteuses, avec lesquelles nous proposons des répertoires autour de la chanson française ; un duo très apprécié pour vos anniversaires, ou dans les maisons de retraite (EHPAD, ...) !
+								Je suis <strong>accordéoniste à Paris</strong> mais me produis dans la France entière. Différentes formules sont disponibles et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies et votre budget, je peux venir en tant qu'<a href="{{ path('accordeoniste_soiree') }}">accordéoniste pour votre soirée</a> (en solo) ou accompagné par d'autres musiciens. Lors d'un mariage ou d'une soirée privée, on appréciera tout particulièrement le <strong>groupe de jazz manouche</strong>, par exemple. J'accompagne également plusieurs chanteuses, avec lesquelles nous proposons des répertoires autour de la chanson française ; un duo très apprécié pour vos anniversaires, ou dans les maisons de retraite (EHPAD, ...) !
 							</p>
 
 							<p>
@@ -139,11 +143,11 @@
 							<h2 class="section-title">Accordéoniste jazz</h2>
 
 							<p>
-								Jérémy Dutheil se spécialise aujourd'hui plus particulièrement dans l'<strong>accordéon jazz</strong> et <strong>jazz manouche</strong>. Il est <i>leader</i> d'une formation jazz manouche, qui se produit en duo (accordéon / guitare), trio (accordéon / guitare / contrebasse) ou quartet (accordéon / 2 guitares / contrebasse) : <a href="{{ path('jdsp') }}">Jérémy Dutheil & Solal Poux</a>.
+								Jérémy Dutheil se spécialise aujourd'hui plus particulièrement dans l'<strong>accordéon jazz</strong> et <strong>jazz manouche</strong>. Il est <i>leader</i> d'une formation jazz manouche, qui se produit en duo (accordéon / guitare), trio (accordéon / guitare / contrebasse) ou quartet (accordéon / 2 guitares / contrebasse). Vous pouvez retrouver ce groupe de jazz manouche en public pour des concerts ("Jérémy Dutheil & Solal Poux"), mais également lors d'événements privés tels que les soirées d'entreprise.
 							</p>
 
 							<p>
-								Accordéoniste jazz, Jérémy joue également en solo autour d'un répertoire de standards jazz ; ci-dessous par exemple, un arrangement de <i>Ain't Misbehavin</i> par Frank Marocco.
+								Accordéoniste jazz, Jérémy joue également en solo autour d'un répertoire de standards jazz ; ci-dessous par exemple, un arrangement de <i>Ain't Misbehavin</i> par Frank Marocco. Influencé par des accordéonistes tels que Vincent Peirani, Richard Galliano ou encore Ludovic Beier, Jérémy aime explorer un répertoire jazz plutôt large : swing, bebop, jazz manouche, ...
 							</p>
 
 							<div class="embed-responsive embed-responsive-16by9 home-video">
@@ -168,9 +172,9 @@
 							<img data-src="{{ asset('img/manouchebg.jpg') }}" alt="Duo jazz manouche avec accordéon" title="Jérémy Dutheil & Solal Poux - Jazz manouche avec accordéon" class="img-fluid page-section__img lazyload">
 						</picture>
 
-						<p style="margin-top: 15px;">
+						<!--<p style="margin-top: 15px;">
 							<a href="{{ path('manouche') }}" class="btn-secondary">Plus d'informations sur le groupe jazz manouche</a>
-						</p>
+						</p>-->
 					</div>
 				</div>
 				<!-- /.row -->
@@ -205,7 +209,7 @@
 						</p>
 
 						<p class="txt--blank">
-							Certain de ces ensembles de musiciens se destinent plus particulièrement à l'animation de vos événements (mariage, anniversaire, soirée privée..), comme notre <a href="{{ path('manouche') }}">groupe de jazz manouche</a>, par exemple (voir aussi l'ensemble de nos <a href="{{ path('musiciens_soirees') }}" style="color: #ffffff;">groupes de musique pour vos soirées</a>).
+							Certain de ces ensembles de musiciens se destinent plus particulièrement à l'animation de vos événements (mariage, anniversaire, soirée privée..), comme notre <strong>groupe de jazz manouche</strong>, par exemple (voir aussi l'ensemble de nos <a href="{{ path('musiciens_soirees') }}">groupes de musique pour vos soirées</a>).
 						</p>
 
 						<p>
@@ -226,7 +230,7 @@
 							</p>
 
 							<p>
-								Je travaille actuellement avec plusieurs <em class="text-link ">chanteurs et chanteuses</em>, embrassant un large répertoire au sein même de la chanson ; certaines formations s'orienteront plutôt vers les standards du style (Brel, Piaf, Ferré), d'autres vers des auteurs moins connus du grand public (Leprest, Dimey). Mon accordéon s'invite aussi bien sur de la chanson réaliste (Damia, Fréhel), que de la chanson coquine (Odette Laure, Anne Sylveste) ou révoltée (Renaud, Paccoud).
+								Je travaille actuellement avec plusieurs <em>chanteurs et chanteuses</em>, embrassant un large répertoire au sein même de la chanson française. Certaines formations s'orienteront plutôt vers les standards du style (Brel, Piaf, Ferré), d'autres vers des auteurs moins connus du grand public (Leprest, Dimey). Mon accordéon s'invite aussi bien sur de la chanson réaliste (Damia, Fréhel), que de la chanson coquine (Odette Laure, Anne Sylveste) ou révoltée (Renaud, Paccoud).
 							</p>
 
 							<p>
