--- a/templates/pages/accordeoniste_soiree.html.twig
+++ b/templates/pages/accordeoniste_soiree.html.twig
@@ -32,7 +32,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<p>
-						Vous êtes à la recherche d'un <strong>accordéoniste pour animer votre soirée</strong> ? Cocktail d'entreprise, <a href="{{ path('animations_mariages') }}" style="color: #555555;">mariage</a>, fête entre amis sur le <a style="color: #555555;" href="{{ path('guinguette') }}">thème "<i>Guinguette</i>"</a>, anniversaire... Les occasions sont nombreuses pour inviter un musicien, et l'accordéon s'adaptera facilement à tout type d'événement. Même si la tentation de réserver un <a style="color: #555555;" href="{{ path('musiciens_soirees') }}">groupe de musique pour votre soirée</a> est souvent grande, les conditions ne sont parfois pas réunies pour pouvoir le faire (taille du lieu, considérations techniques, budget...).
+						Vous êtes à la recherche d'un <strong>accordéoniste pour animer votre soirée</strong> ? <a href="{{ path('entreprise') }}" style="color: #E4E7EB;">Cocktail et soirée d'entreprise</a>, <a href="{{ path('animations_mariages') }}" style="color: #E4E7EB;">mariage</a>, fête entre amis sur le <a style="color: #E4E7EB;" href="{{ path('guinguette') }}">thème "<i>Guinguette</i>"</a>, anniversaire... Les occasions sont nombreuses pour inviter un musicien, et l'accordéon s'adaptera facilement à tout type d'événement. Même si la tentation de réserver un <a target="_blank" href="{{ path('musiciens_soirees') }}">groupe de musique pour votre soirée</a> est souvent grande, les conditions ne sont parfois pas réunies pour pouvoir le faire (taille du lieu, considérations techniques, budget...).
 					</p>
 
 					<p>
@@ -233,6 +233,10 @@
 
 			<div class="row justify-content-center" style="margin-bottom: 20px;">
 				<div class="col-sm-6">
+					{% include 'utils/youtubelazy.html.twig' with { 'youtubeId': '7rHCQfzAl68', 'title': 'Balakatun (Marc Berthoumieux)' } %}
+				</div>
+
+				<div class="col-sm-6">
 					{% include 'utils/youtubelazy.html.twig' with { 'youtubeId': '8eY4FsHf7g0', 'title': 'Carnevale (R. Ruggieri)' } %}
 				</div>
 			</div>
@@ -339,7 +343,7 @@
 			</p>
 
 			<p>
-				Pour démarrer une première discussion et obtenir plus de renseignements, n'hésitez pas à me contacter ; vous pouvez également consulter la page des <a href="{{ path('animations') }}">animations musicales</a> pour découvrir d'autres possibilités (notamment avec un <a href="{{ path('manouche') }}">groupe de jazz manouche</a>).
+				Pour démarrer une première discussion et obtenir plus de renseignements, n'hésitez pas à me contacter ; vous pouvez également consulter la page des animations musicales pour découvrir d'autres possibilités (notamment avec un groupe de jazz manouche ou avec une chanteuse).
 			</p>
 
 			<h2 class="section-title section-title--small" style="margin-top: 25px;">Quelques exemples de propositions</h2>
