--- a/templates/pages/guinguette.html.twig
+++ b/templates/pages/guinguette.html.twig
@@ -54,7 +54,7 @@
                     </p>
 
 					<p>
-						Pour votre <strong>soirée guinguette</strong>, je vous propose des animations seul à l'accordéon, ou bien accompagné d'une chanteuse. En duo <strong>accordéon / voix</strong>, nous proposons un répertoire qui balaie la chanson française des années 30 à aujourd'hui.
+						Pour votre <strong>soirée guinguette</strong>, je vous propose des <a href="{{ path('animations') }}">animations musicales</a> seul à l'accordéon, ou bien accompagné d'une chanteuse. En duo <strong>accordéon / voix</strong>, nous proposons un répertoire qui balaie la chanson française des années 30 à aujourd'hui.
 					</p>
 
 					<p>
@@ -100,8 +100,26 @@
 				</div>
             </div>
 
-		{{ include('utils/contact-cta.html.twig') }}
+			{{ include('utils/contact-cta.html.twig') }}
 
+			<h2 style="margin-top: 15px;" class="section-title section-title--small">Soirée guinguette : le dress code !</h2>
+
+			<p>
+				Pour une soirée guinguette réussie, il est indispensable de penser le <em>dress code</em> dans ses moindres détails ! Briefez vos invités, et demandez leur de jouer le jeu ; vous recréerez alors une ambiance années 50, nostalgie garantie ! Pour les hommes, les <strong>bretelles</strong> seront l'accessoire indispensable. On part également sur un pantalon, et un t-shirt à rayures ou voir un marcel. Sans oublier la traditionnelle <strong>gapette parisienne</strong> ! <br>
+				Les filles pourront s'orienter vers des robes à pois, classique du genre, et des chaussures basses types ballerines. Optez pour un chapeau de paille ou voir même osez le chignon !
+			</p>
+
+			<h2 style="margin-top: 15px;" class="section-title section-title--small">Le décor de la guinguette</h2>
+
+			<p>
+				Que serait une soirée guinguette sans son décor inimitable ? Nappes à carreaux bien sûr, mais également guirlandes et lampions... N'hésitez pas à ajouter une touche champêtre également, comme par exemple des ballots de paille ; très tendance !
+			</p>
+
+			<h2 style="margin-top: 15px;" class="section-title section-title--small">La musique des soirées guinguettes</h2>
+
+			<p>
+				Qui dit soirée guinguette dit accordéon.. Dit aussi morceaux emblématiques ! On pense notamment à des valses comme "Le Dénicheur", "La Java Bleue", "C'est un mauvais garçon" ou encore "Comme de bien entendu". Pour ma part, j'agrémente également le répertoire musical d'un peu de swing, typique des années guinguette également !
+			</p>
         </div>
     </section>
 {% endblock %}
