--- a/templates/pages/musiciens_soirees.html.twig
+++ b/templates/pages/musiciens_soirees.html.twig
@@ -113,7 +113,7 @@
 
             <p>
                 Nous proposons des animations musicales autour de la chanson française, à partir du <strong>duo (accordéon / voix)</strong> ; de Piaf à Brel, en passant par Aznavour ou encore Odette Laure, il y en a pour tous les goûts... <br>
-				Le style chanson française / guinguette s'adapte parfaitement à des soirées conviviales, dans un style <i>rétro</i> ou classe ; les chansons jouées sont pour la plupart très connues, et vos invités pourront reprendre les refrains en coeur ! Musique d'ambiance, ou réelle animation de soirée sous forme de concert.. C'est vous qui décidez du style que vous préférez pour votre événement !
+				Le style chanson française / <a href="{{ path('guinguette') }}">soirée guinguette</a> s'adapte parfaitement à des soirées conviviales, dans un style <i>rétro</i> ou classe ; les chansons jouées sont pour la plupart très connues, et vos invités pourront reprendre les refrains en coeur ! Musique d'ambiance, ou réelle animation de soirée sous forme de concert.. C'est vous qui décidez du style que vous préférez pour votre événement !
             </p>
 
             <div class="row justify-content-center" style="margin-bottom: 20px;">
@@ -148,7 +148,17 @@
 			<hr style="background-color: #2d2d2d; margin: 25px 0;">
 
 			{{ include('utils/contact-cta.html.twig') }}
-        </div>
+	
+			<h2 class="section-title section-title--small">Musiciens professionnels <small>L'expérience de l'événementiel</small></h2>
+		
+			<p>
+				Nous possédons une forte expérience dans le domaine de l'événementiel, et cela fait maintenant plusieurs années que nous intervenons en tant que <strong>musiciens pour votre soirée</strong>. Chaque événement est unique, et c'est pourquoi nous prenons le temps de la discussion en amont. L'objectif est de répondre au mieux à vos attentes, et à celles de vos invités. Nous choisirons ensemble le groupe de musique pour votre soirée, et discuterons des différents points importants : horaires, répertoire, sonorisation, ... 
+			</p>
+
+			<p>
+				Nous sommes habitués à travailler aussi bien avec des entreprises (cocktail, vernissage, événement de fin d'année, ...) qu'avec des particuliers (anniversaire, mariage, soirée privée, ...). Les attentes ne sont pas les mêmes, et nous adaptons bien évidemment nos animations musicales à chaque contexte. 
+			</p>
+		</div>
 		<!-- /.container -->
 	</section>
 {% endblock %}
