--- a/templates/pages/accordeoniste_soiree.html.twig
+++ b/templates/pages/accordeoniste_soiree.html.twig
@@ -32,7 +32,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<p>
-						Vous êtes à la recherche d'un <strong>accordéoniste pour animer votre soirée</strong> ? <a href="{{ path('entreprise') }}" style="color: #E4E7EB;">Cocktail et soirée d'entreprise</a>, <a href="{{ path('animations_mariages') }}" style="color: #E4E7EB;">mariage</a>, fête entre amis sur le <a style="color: #E4E7EB;" href="{{ path('guinguette') }}">thème "<i>Guinguette</i>"</a>, anniversaire... Les occasions sont nombreuses pour inviter un musicien, et l'accordéon s'adaptera facilement à tout type d'événement. Même si la tentation de réserver un <a target="_blank" href="{{ path('musiciens_soirees') }}">groupe de musique pour votre soirée</a> est souvent grande, les conditions ne sont parfois pas réunies pour pouvoir le faire (taille du lieu, considérations techniques, budget...).
+						Vous recherchez un <strong>accordéoniste pour animer votre soirée</strong> ou événement ? <a href="{{ path('entreprise') }}" style="color: #E4E7EB;">Cocktail et soirée d'entreprise</a>, <a href="{{ path('animations_mariages') }}" style="color: #E4E7EB;">mariage</a>, fête entre amis sur le <a style="color: #E4E7EB;" href="{{ path('guinguette') }}">thème "<i>Guinguette</i>"</a>, anniversaire... Les occasions sont nombreuses pour inviter un musicien, et l'accordéon s'adaptera facilement à tout type d'événement. Même si la tentation de réserver un <a target="_blank" href="{{ path('musiciens_soirees') }}">groupe de musique pour votre soirée</a> est souvent grande, les conditions ne sont parfois pas réunies pour pouvoir le faire (taille du lieu, considérations techniques, budget...).
 					</p>
 
 					<p>
