improve title / metadesc

--- a/templates/pages/accordeoniste_soiree.html.twig
+++ b/templates/pages/accordeoniste_soiree.html.twig
@@ -1,9 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Accordéoniste pour l'animation de votre soirée ou événement{% endblock %}
+{% block oldtitle %}Accordéoniste pour l'animation de votre soirée ou événement{% endblock %}
+{% block title %}Vous cherchez un accordéoniste pour animer votre soirée ?{% endblock %}
+
+{% block oldmetadesc %}
+	<meta name="description" content="Vous êtes à la recherche d'un accordéoniste pour animer votre soirée ? Seul ou en groupe, découvrez mes formules sur mesure.">
+{% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous êtes à la recherche d'un accordéoniste pour animer votre soirée ? Seul ou en groupe, découvrez mes formules sur mesure.">
+	<meta name="description" content="Professionnel reconnu, je propose des animations musicales à l'accordéon pour votre soirée ; venez découvrir mes vidéos, et contactez moi pour un devis rapide">
 {% endblock %}
 
 {% block body %}
