remove list on soiree

--- a/templates/pages/accordeoniste_soiree.html.twig
+++ b/templates/pages/accordeoniste_soiree.html.twig
@@ -110,7 +110,20 @@
 						<strong>Accordéon Jazz - Quelques titres pour l'exemple</strong>
 					</p>
 
-					<ul>
+					<p style="text-align: center;">
+						Stella by Starlight <br>
+						All of Me <br>
+						How high the Moon<br>
+						Billie's Bounce<br>
+						Autumn Leaves <br>
+						Body and Soul <br>
+						There will never be another you<br>
+						On the sunny side of the street<br>
+						Saint James Infirmary<br>
+						All the things you are
+					</p>
+
+					<!--<ul>
 						<li>
 							Stella by Starlight
 						</li>
@@ -150,7 +163,7 @@
 						<li>
 							All the things you are
 						</li>
-					</ul>
+					</ul>-->
 				</div>
 			</div>
 
@@ -178,7 +191,22 @@
 						<strong>Accordéon guinguette : quelques titres pour l'exemple</strong>
 					</p>
 
-					<ul>
+					<p style="text-align: center;">
+						Le balajo <br>
+						Indifférence <br>
+						Champs Elysées<br>
+						La Foule<br>
+						La bohème<br>
+						Ménilmontant<br>
+						Que reste t'il de nos amours<br>
+						La vie en rose<br>
+						Emmenez-moi<br>
+						Minor Swing<br>
+						Un mauvais garçon<br>
+						Un clair de lune à Maubeuge<br>
+					</p>
+
+					<!--<ul>
 						<li>
 							Le balajo
 						</li>
@@ -226,7 +254,7 @@
 						<li>
 							Un clair de lune à Maubeuge
 						</li>
-					</ul>
+					</ul>-->
 				</div>
 			</div>
 
@@ -266,7 +294,24 @@
 				</div>
 
 				<div class="col-sm-6">
-					<ul>	
+					<p style="text-align: center;">
+						Les feuilles mortes<br>
+						La Foule<br>
+						All of Me<br>
+						Minor Swing<br>
+						Sous le ciel de Paris<br>
+						Aux Champs Elysées<br>
+						Mon amant de Saint Jean<br>
+						Sunny side of the Street<br>
+						Emmenez moi<br>
+						Ménilmontant<br>
+						Les copains d'abord<br>
+						Un mauvais garçon<br>
+						La Javanaise<br>
+						Les Yeux Noirs<br>
+						<i>Et bien d'autres...</i>
+					</p>
+					<!--<ul>	
 						<li>
 							Les feuilles mortes
 						</li>
@@ -326,7 +371,7 @@
 						<li>
 							<i>Et bien d'autres...</i>
 						</li>
-					</ul>
+					</ul>-->
 				</div>
 			</div>
 
