--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -4,8 +4,12 @@
 	Animation musicale pour vos événements - Soirée - Cocktail
 {% endblock %}
 
-{% block metadesc %}
+{% block oldmetadesc %}
 	<meta name="description" content="Vous cherchez une animation musicale pour votre événement (mariage, soirée, cocktail) ? Groupe jazz manouche, duos chanson, ... déplacements dans toute la France !">
+{% endblock %}
+
+{% block metadesc %}
+	<meta name="description" content="Vous cherchez une animation musicale pour votre événement ? Découvrez nos formules sur mesure pour une soirée réussie !">
 {% endblock %}
 
 {% block body %}
